# nip4

./: CHANGELOG.md  README.md  TODO  meson.build  meson_options.txt  org.libvips.nip4.json  org.libvips.nip4.metainfo.xml
examples/: 65346_antonine-lady-nip4.ws  65346_antonine-lady.ws
share/nip4/compat/7.14/: _stdenv.def  _types.def
share/nip4/compat/7.16/: Image.def  _stdenv.def  _types.def
share/nip4/compat/7.24/: _stdenv.def  _types.def
share/nip4/start/: Colour.def  Filter.def  Histogram.def  Image.def  Math.def  Matrix.def  Preferences.ws  Region.def  Tasks.def  _convert.def  _generate.def  _joe_extra.def  _joe_utilities.def  _list.def  _magick.def  _predicate.def  _stdenv.def  _types.def  _vips7.def  _vips7compat.def  _vips8.def
src/: action.c  app.c  builtin.c  class.c  classmodel.c  column.c  columnview.c  compile.c  compile.h  dump.c  dump.h  expr.c  expr.h  factorial.def  filemodel.c  filemodel.h  graphicview.c  gtkutil.c  gtkutil.h  heap.c  heap.h  heapmodel.c  icontainer.c  iimage.c  iimage.h  imageinfo.c  imageui.c  imagewindow.c  imagewindow.h  iobject.c  iobject.h  itext.c  itext.h  itextview.c  lex.l  link.c  main-batch.c  main-gui.c  main-snip.c  main.c  (+53 more)
src/gtk/: imagewindow.ui  mainwindow.ui  nip4.css  workspacegroupview.ui
src/kplot/: label.c
suppressions/: valgrind.supp
test/: meson.build  test_cli.def  test_cli.sh  test_cli.ws
test/snip/: test_all.sh  test_convert.def  test_generate.def  test_list.def  test_object.def  test_predicate.def  test_snip.def  test_stdenv.def  test_types.def
test/workspaces/: a.def  test_all.sh  test_colour.ws  test_colour2.ws  test_filter.ws  test_histogram.ws  test_image.ws  test_magick.ws  test_math.ws  test_matrix.ws  test_region.ws  test_snip.def  test_tasks.ws  test_widgets.ws  x.v  x.ws  x2.v  xray.ws
test/workspaces/images/: slanted_oval_vase2.csv
(+32 files in other folders)
